--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "superiors.doc.tar.xz:"	194aeb9ebd06ca67eb26113cd6e16bb91a0e2dae
-  "superiors.tar.xz:"	30e7267d83f7432fd20fcaecc7960f573d7bbe65
+  superiors.doc.tar.xz: 71cf5b0eeeffb1ced46b8ee60203b706ca4482ab
+  superiors.tar.xz: 379d4c6bcb4f42923b9899146e90e1b6148eb661
